<resources>
    <string name="app_name">LuniXpassMob</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_lunixpass">LuniXpass</string>
    <string name="title_profile">Profile</string>
    <string name="title_library">Library</string>
    <string name="header_lunixpass">Play many selected and quality games for only IDR 60,000.00 for 1 month!</string>
    <string name="Sub">Members will get many exclusive games with a predetermined duration.</string>
    <string name="subscribe">Subscribe to Lunixpasss</string>
    <string name="tc">Terms and conditions apply, read LuniXpass Terms for complete details!</string>
    <string name="subs2">Get unlimited access to all our curated titles as soon as they are released exclusively in Premium edition game library. All for only IDR 60,000.00 per month!</string>
    <string name="remove_from_library">Remove from Library</string>
    <string name="add_to_library">Add to Library</string>
    <string name="pay">Upload Payment Proof</string>
    <string name="up_bukti">Upload Bukti Pembayaran</string>
    <string name="must_login">Must Login First</string>
    <string name="payment_mock">Please Make Payment Into \n Account number : 1330242198 \n Bank Name : Mandiri \n Amount: Rp. 65.000</string>
</resources>