<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_lunixpass"
        android:icon="@drawable/ic_lunxpass_logo"
        android:title="@string/title_lunixpass" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_bookmark_24"
        android:title="@string/title_library" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/title_profile" />
</menu>